[gd_scene load_steps=6 format=3 uid="uid://ke2aldt5v8lo"]

[ext_resource type="Script" path="res://scripts/Interface/timer_container.gd" id="1_j1dhp"]
[ext_resource type="Texture2D" uid="uid://bkp4gorj58xq6" path="res://assets/Themes/Rectangle 604.png" id="2_aoies"]
[ext_resource type="Theme" uid="uid://6t1dhhp66lq2" path="res://assets/Themes/Cooking_button.tres" id="3_k0wn0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5qlav"]
texture = ExtResource("2_aoies")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0
modulate_color = Color(0.301961, 1, 0.32549, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gr414"]
modulate_color = Color(1, 1, 1, 0)

[node name="TimerContainer" type="GridContainer"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_j1dhp")

[node name="ControlProgress" type="HBoxContainer" parent="."]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ProgressTimer" type="ProgressBar" parent="ControlProgress"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_styles/fill = SubResource("StyleBoxTexture_5qlav")
value = 100.0

[node name="LabelTime" type="Label" parent="ControlProgress/ProgressTimer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.273873, 0.273873, 0.273873, 1)
theme_override_styles/normal = SubResource("StyleBoxTexture_gr414")
text = "00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonClaim" type="Button" parent="ControlProgress"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_k0wn0")
text = "Claim"

[connection signal="pressed" from="ControlProgress/ButtonClaim" to="." method="_on_button_pressed"]
